Set mail using localhost & added mail template in kustvakt config.
Change-Id: I41eea78cf1fb19b44f46411e25ecb27b52c74982